--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.md diff=markdown
+*.php diff=php
+
+.gitattributes export-ignore
+.gitignore export-ignore
+.styleci.yml export-ignore
