--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": "^8.0",
         "ext-zlib": "*",
-        "illuminate/http": "^8.0||^9.0"
+        "illuminate/http": "^8.0||^9.0||^10.0"
     },
     "autoload": {
         "psr-4": {
