--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-zlib": "*",
-        "illuminate/http": "^8.0||^9.0||^10.0"
+        "illuminate/http": "^10.0||^11.0"
     },
     "autoload": {
         "psr-4": {
