--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "PCS",
-            "email": "pcs.engineer.team@gmail.com"
+            "name": "puklipo"
         }
     ],
     "require": {
